--- a/sign-up.html
+++ b/sign-up.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <!-- Mobile friendly viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ticketmaster SG - Registration</title>
   <style>
@@ -18,7 +19,8 @@
     }
     .registration-card {
       background-color: #fff;
-      width: 350px;
+      width: 90%;
+      max-width: 350px;
       border-radius: 6px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       overflow: hidden;
@@ -57,6 +59,12 @@
     .back-to-signin { margin-top: 15px; font-size: 14px; }
     .back-to-signin a { color: #0071ce; text-decoration: none; }
     .back-to-signin a:hover { text-decoration: underline; }
+    /* Mobile adjustments */
+    @media (max-width: 600px) {
+      .card-header { font-size: 20px; }
+      label, input { font-size: 14px; }
+      button { font-size: 14px; padding: 10px; }
+    }
   </style>
 </head>
 <body>
