--- a/confirmation.html
+++ b/confirmation.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- Ensures proper scaling on mobile devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ticketmaster SG - Confirmation</title>
   <style>
@@ -19,8 +18,7 @@
     }
     .confirmation-card {
       background-color: #fff;
-      width: 90%;
-      max-width: 350px;
+      width: 350px;
       border-radius: 6px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
       overflow: hidden;
@@ -58,12 +56,6 @@
       text-decoration: none;
     }
     .back-to-main a:hover { text-decoration: underline; }
-    /* Mobile adjustments */
-    @media (max-width: 600px) {
-      .card-header { font-size: 20px; }
-      .card-body h1 { font-size: 20px; }
-      button { font-size: 14px; padding: 10px; }
-    }
   </style>
 </head>
 <body>
